Fri Dec 27 13:25:03 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{setup.mak,Makefile.sub}: update fake.rb like
	  template/fake.rb.in.

Thu Dec 26 16:10:41 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (fake.rb): should depend on version.h because
	  if RUBY_VERSION is updated, fake.rb need to say the new version
	  to avoid install error in rbconfig.rb.

Thu Dec 26 14:25:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (HASH_REJECT_COPY_EXTRA_STATES): turn off the old
	  behavior, copying extra states by accident.

Thu Dec 26 10:49:14 2013  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* version.h (RUBY_VERSION): 2.2.0 development has started.

Thu Dec 26 10:27:53 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/merger.rb (tag): support 2.1.1 semi-automatic tagging and 2.2.0
	  explicit tagging.

Thu Dec 26 06:35:25 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* proc.c: Having any mandatory keyword argument increases min arity
	  [#9299]

Thu Dec 26 06:27:08 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* proc.c: Having optional keyword arguments makes maximum arity +1,
	  not unlimited [#8072]

Thu Dec 26 01:09:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/release.sh: make symbolic links.

Thu Dec 26 00:45:33 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/make-snapshot: support new version scheme.

Wed Dec 25 22:44:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments): set arg_keyword_check from
	  nd_cflag, which is set by parser.  internal ID is used for
	  unnamed keyword rest argument, which should be separated from no
	  keyword check.

	* iseq.c (rb_iseq_parameters): if no keyword check, keyword rest is
	  present.

	* parse.y (new_args_tail_gen): set keywords check to nd_cflag, which
	  equals to that keyword rest is not present.

Wed Dec 25 22:32:19 2013  Zachary Scott  <e@zzak.io>

	* lib/abbrev.rb: [DOC] rdoc format patch by Giorgos Tsiftsis [Bug #9146]
